[package]
name = "raspi_stream"
version = "0.1.0"
edition = "2024"
description = "RTSP streaming library/application for Raspberry Pi using GStreamer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/morita5840/raspi_stream"
publish = false
keywords = ["raspberry-pi", "rtsp", "gstreamer", "camera", "streaming"]

[dependencies]
gstreamer = "0.25.1"
gstreamer-rtsp-server = "0.25.0"
